--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:myFlix-Angular-client": "node dist/my-flix-angular-client/server/server.mjs"
+    "serve:ssr:myFlix-Angular-client": "node dist/my-flix-angular-client/server/server.mjs",
+    "deploy": "ng deploy --base-href=/myFlix-Angular-client/"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +24,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.9",
+    "angular-cli-ghpages": "^2.0.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
